hphp/hack/test/typecheck/cannot_append.php
<?hh // partial

function foo(dict<int, string> $x): void {
  $x[] = "hello";
}
